fix: showcase header overflow

--- a/website/src/pages/showcase/styles.scss
+++ b/website/src/pages/showcase/styles.scss
@@ -1,7 +1,7 @@
 .showcase {
     .header {
         padding-top: 0;
-        width: 100vw;
+        width: 100%;
 
         .title {
             color: var(--color-primary);
